--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AgFarm</string>
+    <string name="app_name">EKrishi</string>
 
     <string name="sign_in">Sign In</string>
 
@@ -9,6 +9,6 @@
     <string name="weather">Weather</string>
     <string name="profile">Profile</string>
     <string name="settings">Settings</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
