--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">EKrishi</string>
+    <string name="app_name">eKrishi</string>
 
     <string name="sign_in">Sign In</string>
 
@@ -11,4 +11,8 @@
     <string name="settings">Settings</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="temperature_text">30°</string>
+    <string name="wind">Wind</string>
+    <string name="humidity">Humidity</string>
+    <string name="pressure">Pressure</string>
 </resources>
