--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="temperature_text">30°</string>
+    <string name="temperature_text_dynamic">%s° C</string>
     <string name="wind">Wind</string>
     <string name="humidity">Humidity</string>
     <string name="pressure">Pressure</string>
